update the design of the addTest page and implement the support of language=en

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,6 +1,24 @@
 ####
 # Naming pattern: <PageName>.<loggedInState>.<messageDescriptor>
 ####
-home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier können Sie sich für Seminare einschreiben, Tests absolvieren und Ihre perösnliche Creditpoints-Übersicht anzeigen.
+global.notLoggedIn.info=Dieser Inhalt ist nur fÃ¼r angemeldete User sichtbar. Bitte loggen Sie sich ein.
+home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier kï¿½nnen Sie sich fï¿½r Seminare einschreiben, Tests absolvieren und Ihre perï¿½snliche Creditpoints-ï¿½bersicht anzeigen.
 home.loggedIn.welcome=Herzlich Willkommen
-home.loggedIn.info=Hier sehen Sie eine Auflistung über alle Seminare, für die sie eingeschrieben sind.
+home.loggedIn.info=Hier sehen Sie eine Auflistung ï¿½ber alle Seminare, fï¿½r die sie eingeschrieben sind.
+addTest.selectSeminar=Seminar
+addTest.selectCredits=Credits
+addTest.selectCredits.05credits=0,5 CP
+addTest.selectCredits.075credits=0,75 CP
+addTest.selectCredits.1credits=1 CP
+addTest.selectPassThreshold=Bestehensgrenze
+addTest.selectStartdate=Startdatum
+addTest.selectEnddate=Enddatum
+addTest.selectDuration=Dauer
+addTest.selectMissingAnswerGrading=Bewertung fehlender Antworten:
+addTest.selectMissingAnswerGrading.OnePointDeduction=1 Punkt wird abgezogen
+addTest.selectMissingAnswerGrading.ZeroPointDeduction=Keine Punkte werden abgezogen
+addTest.selectMissingAnswerGrading.FiftyPercentRule=50% der Fragen m&uml;ssen beantwortet werden um den Test zu bestehen
+addTest.selectFalseAnswerGrading=Bewertung falscher Antworten:
+addTest.selectFalseAnswerGrading.OnePointDeduction=1 Punkt wird abgezogen
+addTest.selectFalseAnswerGrading.ZeroPointDeduction=Keine Punkte werden abgezogen
+
