--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,3 +4,19 @@
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.welcome=Welcome
 home.loggedIn.info=You can find a list of all Seminars for which you are enrolled below.
+addTest.selectSeminar=Seminar
+addTest.selectCredits=Credits
+addTest.selectCredits.05credits=0,5 CP
+addTest.selectCredits.075credits=0,75 CP
+addTest.selectCredits.1credits=1 CP
+addTest.selectPassThreshold=Bestehensgrenze
+addTest.selectStartdate=Startdate
+addTest.selectEnddate=Enddate
+addTest.selectDuration=Duration
+addTest.selectMissingAnswerGrading=Grading of missing answers:
+addTest.selectMissingAnswerGrading.OnePointDeduction=1 point will be deducted
+addTest.selectMissingAnswerGrading.ZeroPointDeduction=No points will be deducted
+addTest.selectMissingAnswerGrading.FiftyPercentRule=50% of the questions need to be answered to pass the test
+addTest.selectFalseAnswerGrading=Grading of false answers:
+addTest.selectFalseAnswerGrading.OnePointDeduction=1 point will be deducted
+addTest.selectFalseAnswerGrading.ZeroPointDeduction=No points will be deducted
