implement internationalisation in the front forms

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,7 @@
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.welcome=Welcome
 home.loggedIn.info=You can find a list of all Seminars for which you are enrolled below.
+addTest.title=Create a Test
 addTest.selectSeminar=Seminar
 addTest.selectCredits=Credits
 addTest.selectCredits.05credits=0,5 CP
@@ -20,3 +21,24 @@ addTest.selectMissingAnswerGrading.FiftyPercentRule=50% of the questions need to
 addTest.selectFalseAnswerGrading=Grading of false answers:
 addTest.selectFalseAnswerGrading.OnePointDeduction=1 point will be deducted
 addTest.selectFalseAnswerGrading.ZeroPointDeduction=No points will be deducted
+contact.title=Contact
+contact.contactHeadline=Contact
+contact.uniTitle=NORDAKADEMIE
+contact.description=University of Applied Science
+contact.street=Köllner Chaussee 11
+contact.city=D-25337 Elmshorn
+contact.telephone=Telefon: +49 (0)4121 4090-0
+contact.fax=Fax: +49 (0)4121 4090-40
+contact.mail=E-Mail: info@nordakademie.de
+contact.homepage=http://www.nordakademie.de
+add-seminar-form.title=Create Seminar
+add-seminar-form.maxParticipants=Maximum attendance
+add-seminar-form.endDate=Enddate
+add-seminar-form.startDate=Startdate
+add-seminar-form.shortDescription=Short description
+add-seminar-form.seminarName=Name of the Seminar
+addQuestion-form.title=Add Question
+addQuestion-form.typeOfQuestion=Type of question
+addQuestion-form.points=Points
+addQuestion-form.question=Question
+addQuestion-form.answer1=Answer 1
