implement internationalisation in the front forms and layout improvements

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,11 +31,16 @@ contact.telephone=Telefon: +49 (0)4121 4090-0
 contact.fax=Fax: +49 (0)4121 4090-40
 contact.mail=E-Mail: info@nordakademie.de
 contact.homepage=http://www.nordakademie.de
+contact.directions=Directios
+contact.directionsCar=By Car
+contact.directionsCarDescription=Die A23 von Hamburg bei der Autobahnabfahrt Elmshorn verlassen. Am Ende der Ausfahrt rechts abbiegen und der Straße folgen. An der dritten Ampel (größere Kreuzung) rechts einordnen und abbiegen. Der Straße folgen - sie führt rechts an der Tankstelle vorbei. An der nächsten Kreuzung (Ampel, Schild NORDAKADEMIE) links in die Köllner Chaussee abbiegen. Nach ungefähr 500 Metern liegt auf der rechten Seite die NORDAKADEMIE.
+contact.directionsTrain=By Train
+contact.directionsTrainDescription=Sie steigen am Hamburger Hauptbahnhof in die Regionalbahn R70 in Richtung Kiel Hbf oder Sie steigen am Bahnhof Altona in die Regionalbahn R60 in Richtung Itzehoe. Nach ca. 30 Minuten steigen Sie an der Haltestelle Elmshorn aus und nehmen am Bahnhof (Holstenplatz) den Bus der Linie 6500 oder 6502. Buslinie 6502: Sie fahren ca. 5 Minuten bis zur Haltestelle "Schule Langelohe". Dort steigen Sie aus und wenden sich nach links. Sie gehen in Richtung des Kreisverkehrs (dort kreuzen sich die Straßen Köllner Chaussee und Langelohe). Sie biegen in die Köllner Chaussee ein und erreichen nach ca. 200 m Fußweg auf der linken Straßenseite die NORDAKADEMIE. Buslinie 6500: Wenn Sie den Bus der Linie 500 (Richtung Kölln-Reisiek) nehmen, steigen Sie nach ca. 5 Minuten Fahrzeit an der Haltestelle "Zum Krückaupark" aus und gehen ein Stück zurück. Nach ca. 50 m Fußweg liegt auf der anderen Straßenseite die NORDAKADEMIE.
 add-seminar-form.title=Create Seminar
 add-seminar-form.maxParticipants=Maximum attendance
 add-seminar-form.endDate=Enddate
 add-seminar-form.startDate=Startdate
-add-seminar-form.shortDescription=Short description
+add-seminar-form.shortDescription=Description
 add-seminar-form.seminarName=Name of the Seminar
 addQuestion-form.title=Add Question
 addQuestion-form.typeOfQuestion=Type of question
