internationalisation of the menu bar

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,7 +25,7 @@ contact.title=Contact
 contact.contactHeadline=Contact
 contact.uniTitle=NORDAKADEMIE
 contact.description=University of Applied Science
-contact.street=Köllner Chaussee 11
+contact.street=K&ouml;llner Chaussee 11
 contact.city=D-25337 Elmshorn
 contact.telephone=Telefon: +49 (0)4121 4090-0
 contact.fax=Fax: +49 (0)4121 4090-40
@@ -33,9 +33,9 @@ contact.mail=E-Mail: info@nordakademie.de
 contact.homepage=http://www.nordakademie.de
 contact.directions=Directios
 contact.directionsCar=By Car
-contact.directionsCarDescription=Die A23 von Hamburg bei der Autobahnabfahrt Elmshorn verlassen. Am Ende der Ausfahrt rechts abbiegen und der Straße folgen. An der dritten Ampel (größere Kreuzung) rechts einordnen und abbiegen. Der Straße folgen - sie führt rechts an der Tankstelle vorbei. An der nächsten Kreuzung (Ampel, Schild NORDAKADEMIE) links in die Köllner Chaussee abbiegen. Nach ungefähr 500 Metern liegt auf der rechten Seite die NORDAKADEMIE.
+contact.directionsCarDescription=Die A23 von Hamburg bei der Autobahnabfahrt Elmshorn verlassen. Am Ende der Ausfahrt rechts abbiegen und der Straße folgen. An der dritten Ampel (gr&ouml;ßere Kreuzung) rechts einordnen und abbiegen. Der Straße folgen - sie f&uuml;hrt rechts an der Tankstelle vorbei. An der n&auml;chsten Kreuzung (Ampel, Schild NORDAKADEMIE) links in die K&ouml;llner Chaussee abbiegen. Nach ungef&auml;hr 500 Metern liegt auf der rechten Seite die NORDAKADEMIE.
 contact.directionsTrain=By Train
-contact.directionsTrainDescription=Sie steigen am Hamburger Hauptbahnhof in die Regionalbahn R70 in Richtung Kiel Hbf oder Sie steigen am Bahnhof Altona in die Regionalbahn R60 in Richtung Itzehoe. Nach ca. 30 Minuten steigen Sie an der Haltestelle Elmshorn aus und nehmen am Bahnhof (Holstenplatz) den Bus der Linie 6500 oder 6502. Buslinie 6502: Sie fahren ca. 5 Minuten bis zur Haltestelle "Schule Langelohe". Dort steigen Sie aus und wenden sich nach links. Sie gehen in Richtung des Kreisverkehrs (dort kreuzen sich die Straßen Köllner Chaussee und Langelohe). Sie biegen in die Köllner Chaussee ein und erreichen nach ca. 200 m Fußweg auf der linken Straßenseite die NORDAKADEMIE. Buslinie 6500: Wenn Sie den Bus der Linie 500 (Richtung Kölln-Reisiek) nehmen, steigen Sie nach ca. 5 Minuten Fahrzeit an der Haltestelle "Zum Krückaupark" aus und gehen ein Stück zurück. Nach ca. 50 m Fußweg liegt auf der anderen Straßenseite die NORDAKADEMIE.
+contact.directionsTrainDescription=Sie steigen am Hamburger Hauptbahnhof in die Regionalbahn R70 in Richtung Kiel Hbf oder Sie steigen am Bahnhof Altona in die Regionalbahn R60 in Richtung Itzehoe. Nach ca. 30 Minuten steigen Sie an der Haltestelle Elmshorn aus und nehmen am Bahnhof (Holstenplatz) den Bus der Linie 6500 oder 6502. Buslinie 6502: Sie fahren ca. 5 Minuten bis zur Haltestelle "Schule Langelohe". Dort steigen Sie aus und wenden sich nach links. Sie gehen in Richtung des Kreisverkehrs (dort kreuzen sich die Straßen K&ouml;llner Chaussee und Langelohe). Sie biegen in die K&ouml;llner Chaussee ein und erreichen nach ca. 200 m Fußweg auf der linken Straßenseite die NORDAKADEMIE. Buslinie 6500: Wenn Sie den Bus der Linie 500 (Richtung K&ouml;lln-Reisiek) nehmen, steigen Sie nach ca. 5 Minuten Fahrzeit an der Haltestelle "Zum Kr&uuml;ckaupark" aus und gehen ein St&uuml;ck zur&uuml;ck. Nach ca. 50 m Fußweg liegt auf der anderen Straßenseite die NORDAKADEMIE.
 add-seminar-form.title=Create Seminar
 add-seminar-form.maxParticipants=Maximum attendance
 add-seminar-form.endDate=Enddate
@@ -47,3 +47,13 @@ addQuestion-form.typeOfQuestion=Type of question
 addQuestion-form.points=Points
 addQuestion-form.question=Question
 addQuestion-form.answer1=Answer 1
+frameHeader.systemName=Examinationsystem
+frameHeader.linkHome=Home
+frameHeader.linkSeminarlist=Semirlist
+frameHeader.linkTestAdministration=Test Administration
+frameHeader.linkResults=Results
+frameHeader.linkChooseSeminar=Choose Seminar
+frameHeader.linkCreateSeminar=Create Seminar
+frameHeader.linkLogin=Login
+frameHeader.linkRegister=Register
+frameHeader.linkLogout=Logout
