--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,7 +3,8 @@
 ####
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.welcome=Welcome
-home.loggedIn.info=You can find a list of all Seminars for which you are enrolled below.
+home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
+home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
 addTest.title=Create a Test
 addTest.selectSeminar=Seminar
 addTest.selectCredits=Credits
@@ -49,10 +50,9 @@ addQuestion-form.question=Question
 addQuestion-form.answer1=Answer 1
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
-frameHeader.linkSeminarlist=Semirlist
+frameHeader.linkSeminarlist=Choose Seminar
 frameHeader.linkTestAdministration=Test Administration
 frameHeader.linkResults=Results
-frameHeader.linkChooseSeminar=Choose Seminar
 frameHeader.linkCreateSeminar=Create Seminar
 frameHeader.linkLogin=Login
 frameHeader.linkRegister=Register
