--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,8 @@
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.welcome=Welcome
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
+home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
+home.testButton=start test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
 addTest.title=Create a Test
 addTest.selectSeminar=Seminar
