improve forms and refactor JScript

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -51,6 +51,7 @@ addQuestion-form.typeOfQuestion=Fragetyp
 addQuestion-form.points=Punktzahl
 addQuestion-form.question=Frage
 addQuestion-form.answer1=Antwort 1
+addQuestion-form.position=Position
 frameHeader.systemName=Pr&uuml;fungssystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Seminar ausw&auml;hlen
@@ -60,3 +61,10 @@ frameHeader.linkCreateSeminar=Seminar Erstellen
 frameHeader.linkLogin=Login
 frameHeader.linkRegister=Registrieren
 frameHeader.linkLogout=Logout
+frameFooter.contact=Kontakt
+frameFooter.impressum=Impressum
+registrationForm.title=Registrierung
+registrationForm.firstName=Vorname
+registrationForm.lastName=Nachname
+registrationForm.eMail=E-Mail
+registrationForm.password=Passwort
