--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,6 +50,7 @@ addQuestion-form.typeOfQuestion=Type of question
 addQuestion-form.points=Points
 addQuestion-form.question=Question
 addQuestion-form.answer1=Answer 1
+addQuestion-form.position=Position
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Choose Seminar
@@ -59,3 +60,10 @@ frameHeader.linkCreateSeminar=Create Seminar
 frameHeader.linkLogin=Login
 frameHeader.linkRegister=Register
 frameHeader.linkLogout=Logout
+frameFooter.contact=Contact
+frameFooter.impressum=Impressum
+registrationForm.title=Registration
+registrationForm.firstName=Firstname
+registrationForm.lastName=Lastname
+registrationForm.eMail=e-Mail
+registrationForm.password=Password
