add two texts for home buttons

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,7 +5,9 @@ home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakad
 home.loggedIn.welcome=Welcome
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
 home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
-home.testButton=start test
+home.StartTestButton=start test
+home.AddTestButton=add test
+home.EditTestButton=edit test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
 addTest.title=Create a Test
 addTest.selectSeminar=Seminar
