--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -6,7 +6,9 @@ home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakade
 home.loggedIn.welcome=Herzlich Willkommen
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
 home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, können Sie den Test über den erscheinenden Button starten.
-home.testButton=starte Test
+home.StartTestButton=starte Test
+home.AddTestButton=Test hinzuf&uuml;gen
+home.EditTestButton=Test bearbeiten
 home.loggedIn.infoLecturer=Hier sehen Sie eine Auflistung aller Seminare, f&uuml;r die Sie Dozent sind.
 addTest.title=Test Hinzuf&uuml;gen
 addTest.selectSeminar=Seminar
