improve the login form

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -70,3 +70,10 @@ registrationForm.firstName=Vorname
 registrationForm.lastName=Nachname
 registrationForm.eMail=E-Mail
 registrationForm.password=Passwort
+loginForm.title=Login
+loginForm.welcomeText=Herzlich Willkommen auf dem Seminarportal der NORDAKADEMIE.
+loginForm.instruction=Bitte melden Sie sich an.
+loginForm.ifNotRegisteredText=Wenn Sie noch nicht registriert sind, klicken Sie bitte
+loginForm.clickHereLink=hier
+loginForm.eMail=E-Mail
+loginForm.password=Passwort
