--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -69,3 +69,10 @@ registrationForm.firstName=Firstname
 registrationForm.lastName=Lastname
 registrationForm.eMail=e-Mail
 registrationForm.password=Password
+loginForm.title=Login
+loginForm.welcomeText=Welcome on the Seminar administration portal of the NORDAKADEMIE.
+loginForm.instruction=Please log in.
+loginForm.ifNotRegisteredText=If you are not already registered, please click
+loginForm.clickHereLink=here
+loginForm.eMail=e-Mail
+loginForm.password=Password
