implement exception handling

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,6 +2,9 @@
 # Naming pattern: <PageName>.<loggedInState>.<messageDescriptor>
 ####
 global.notLoggedIn.info=Dieser Inhalt ist nur f&uuml;r angemeldete User sichtbar. Bitte loggen Sie sich ein.
+global.notRegisteredYet=Wenn Sie sich noch nicht registriert haben, klicken Sie bitte
+global.alreadyRegistered=Wenn Sie sich bereits registriert haben, klicken Sie bitte
+global.clickHereLink=hier
 home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier k&ouml;nnen Sie sich f&uuml;r Seminare einschreiben, Tests absolvieren und Ihre pers&ouml;nliche Creditpoints-Übersicht anzeigen.
 home.loggedIn.welcome=Herzlich Willkommen
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
@@ -73,7 +76,19 @@ registrationForm.password=Passwort
 loginForm.title=Login
 loginForm.welcomeText=Herzlich Willkommen auf dem Seminarportal der NORDAKADEMIE.
 loginForm.instruction=Bitte melden Sie sich an.
-loginForm.ifNotRegisteredText=Wenn Sie noch nicht registriert sind, klicken Sie bitte
-loginForm.clickHereLink=hier
 loginForm.eMail=E-Mail
 loginForm.password=Passwort
+notLoggedInErrorPage.title=Nicht angemeldet
+notLoggedInErrorPage.info=Diese Seite ist nur für angemeldete User sichtbar.
+alreadyLoggedInErrorPage.title=Bereits angemeldet.
+alreadyLoggedInErrorPage.info=Sie sind bereits angemeldet.
+alreadyLoggedInErrorPage.linkToHomeText=Wenn Sie zur Startseite möchten, klicken Sie bitte
+insufficientPermissionsErrorpage.title=Berechtigungsfehler
+insufficientPermissionsErrorpage.info=Sie verfügen leider nicht über die benötigten Berechtigungen um diese Aktion auszuführen.
+alreadyEnrolledErrorPage.title=Sie sind bereits angemeldet
+alreadyEnrolledErrorPage.info=Sie haben sich bereits für das Seminar angemeldet.
+testAlreadyStartedErrorPage.title=Test bereits gestartet
+testAlreadyStartedErrorPage.info=Sie können den Test leider nicht mehr bearbeiten, da dieser bereits begonnen hat.
+genericErrorPage.title=Allgemeiner Fehler
+genericErrorPage.info=Ein allgemeiner Fehler ist aufgetreten.
+
