--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,9 @@
 ####
 # Naming pattern: <PageName>.<loggedInState>.<messageDescriptor>
 ####
+global.notRegisteredYet=If you are not already registered, please click
+global.alreadyRegistered=If you are alreay registered, please click
+global.clickHereLink=here
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.welcome=Welcome
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
@@ -72,7 +75,17 @@ registrationForm.password=Password
 loginForm.title=Login
 loginForm.welcomeText=Welcome on the Seminar administration portal of the NORDAKADEMIE.
 loginForm.instruction=Please log in.
-loginForm.ifNotRegisteredText=If you are not already registered, please click
-loginForm.clickHereLink=here
 loginForm.eMail=e-Mail
 loginForm.password=Password
+notLoggedInErrorPage.title=Not logged in.
+alreadyLoggedInErrorPage.title=Already logged in.
+alreadyLoggedInErrorPage.Info=You are already logged in.
+alreadyLoggedInErrorPage.linkToHomeText=If you want to go to the starting page, please click
+insufficientPermissionsErrorpage.title=Permission error
+insufficientPermissionsErrorpage.info=Unfortunately you do not have the permission to fulfill this request.
+alreadyEnrolledErrorPage.title=Already signed in
+alreadyEnrolledErrorPage.info=You are already signed in for the seminar.
+testAlreadyStartedErrorPage.title=Test already started
+testAlreadyStartedErrorPage.info=You can not edit the because the test has already started.
+genericErrorPage.title=Generic Error
+genericErrorPage.info=A generic error occurred.
