Make tests editable
- big refactoring concerning Test adding and editing
- deleting the db is recommended
- please test everything, i tried to test a lot but not sure whether i got everything covered (form validation, pressing back button etc.)

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -10,26 +10,18 @@ home.loggedIn.welcome=Herzlich Willkommen
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
 home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, können Sie den Test über den erscheinenden Button starten.
 home.StartTestButton=starte Test
-home.AddTestButton=Test hinzuf&uuml;gen
+home.add-testButton=Test hinzuf&uuml;gen
 home.EditTestButton=Test bearbeiten
 home.loggedIn.infoLecturer=Hier sehen Sie eine Auflistung aller Seminare, f&uuml;r die Sie Dozent sind.
-addTest.title=Test Hinzuf&uuml;gen
-addTest.selectSeminar=Seminar
-addTest.selectCredits=Credits
-addTest.selectCredits.05credits=0,5 CP
-addTest.selectCredits.075credits=0,75 CP
-addTest.selectCredits.1credits=1 CP
-addTest.selectPassThreshold=Bestehensgrenze
-addTest.selectStartdate=Startdatum
-addTest.selectEnddate=Enddatum
-addTest.selectDuration=Dauer
-addTest.selectMissingAnswerGrading=Bewertung fehlender Antworten:
-addTest.selectMissingAnswerGrading.OnePointDeduction=1 Punkt wird abgezogen
-addTest.selectMissingAnswerGrading.ZeroPointDeduction=Keine Punkte werden abgezogen
-addTest.selectMissingAnswerGrading.FiftyPercentRule=50% der Fragen m&uml;ssen beantwortet werden um den Test zu bestehen
-addTest.selectFalseAnswerGrading=Bewertung falscher Antworten:
-addTest.selectFalseAnswerGrading.OnePointDeduction=1 Punkt wird abgezogen
-addTest.selectFalseAnswerGrading.ZeroPointDeduction=Keine Punkte werden abgezogen
+add-test.title=Test Hinzuf&uuml;gen
+edit-test.title=Test editieren
+test.selectSeminar=Seminar
+test.selectCredits=Credits
+test.selectStartdate=Startdatum
+test.selectEnddate=Enddatum
+test.selectDuration=Dauer
+test.selectPassThreshold=Bestehensgrenze
+test.selectFalseAnswerGrading=Bewertung falscher Antworten:
 contact.title=Kontakt
 contact.contactHeadline=Kontakt
 contact.uniTitle=NORDAKADEMIE gemeinn&uuml;tzige Aktiengesellschaft
