--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,26 +9,18 @@ home.loggedIn.welcome=Welcome
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
 home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
 home.StartTestButton=start test
-home.AddTestButton=add test
+home.add-testButton=add test
 home.EditTestButton=edit test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
-addTest.title=Create a Test
-addTest.selectSeminar=Seminar
-addTest.selectCredits=Credits
-addTest.selectCredits.05credits=0,5 CP
-addTest.selectCredits.075credits=0,75 CP
-addTest.selectCredits.1credits=1 CP
-addTest.selectPassThreshold=Bestehensgrenze
-addTest.selectStartdate=Startdate
-addTest.selectEnddate=Enddate
-addTest.selectDuration=Duration
-addTest.selectMissingAnswerGrading=Grading of missing answers:
-addTest.selectMissingAnswerGrading.OnePointDeduction=1 point will be deducted
-addTest.selectMissingAnswerGrading.ZeroPointDeduction=No points will be deducted
-addTest.selectMissingAnswerGrading.FiftyPercentRule=50% of the questions need to be answered to pass the test
-addTest.selectFalseAnswerGrading=Grading of false answers:
-addTest.selectFalseAnswerGrading.OnePointDeduction=1 point will be deducted
-addTest.selectFalseAnswerGrading.ZeroPointDeduction=No points will be deducted
+add-test.title=Create a Test
+edit-test.title=Edit a Test
+test.selectSeminar=Seminar
+test.selectCredits=Credits
+test.selectStartdate=Startdate
+test.selectEnddate=Enddate
+test.selectDuration=Duration
+test.selectPassThreshold=Passing Threshold
+test.selectFalseAnswerGrading=Grading of false answers:
 contact.title=Contact
 contact.contactHeadline=Contact
 contact.uniTitle=NORDAKADEMIE
@@ -46,8 +38,8 @@ contact.directionsTrain=By Train
 contact.directionsTrainDescription=Sie steigen am Hamburger Hauptbahnhof in die Regionalbahn R70 in Richtung Kiel Hbf oder Sie steigen am Bahnhof Altona in die Regionalbahn R60 in Richtung Itzehoe. Nach ca. 30 Minuten steigen Sie an der Haltestelle Elmshorn aus und nehmen am Bahnhof (Holstenplatz) den Bus der Linie 6500 oder 6502. Buslinie 6502: Sie fahren ca. 5 Minuten bis zur Haltestelle "Schule Langelohe". Dort steigen Sie aus und wenden sich nach links. Sie gehen in Richtung des Kreisverkehrs (dort kreuzen sich die Straßen K&ouml;llner Chaussee und Langelohe). Sie biegen in die K&ouml;llner Chaussee ein und erreichen nach ca. 200 m Fußweg auf der linken Straßenseite die NORDAKADEMIE. Buslinie 6500: Wenn Sie den Bus der Linie 500 (Richtung K&ouml;lln-Reisiek) nehmen, steigen Sie nach ca. 5 Minuten Fahrzeit an der Haltestelle "Zum Kr&uuml;ckaupark" aus und gehen ein St&uuml;ck zur&uuml;ck. Nach ca. 50 m Fußweg liegt auf der anderen Straßenseite die NORDAKADEMIE.
 add-seminar-form.title=Create Seminar
 add-seminar-form.maxParticipants=Maximum attendance
-add-seminar-form.endDate=Enddate
-add-seminar-form.startDate=Startdate
+add-seminar-form.endDateString=Enddate
+add-seminar-form.startDateString=Startdate
 add-seminar-form.shortDescription=Description
 add-seminar-form.seminarName=Name of the Seminar
 addQuestion-form.title=Add Question
