Make seminars editable
- deleting the db is recommended
- please test everything, i tried to test a lot but not sure whether i got everything covered (form validation, pressing back button etc.)

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -38,11 +38,12 @@ contact.directionsCarDescription=Die A23 von Hamburg bei der Autobahnabfahrt Elm
 contact.directionsTrain=Mit der Bahn
 contact.directionsTrainDescription=Sie steigen am Hamburger Hauptbahnhof in die Regionalbahn R70 in Richtung Kiel Hbf oder Sie steigen am Bahnhof Altona in die Regionalbahn R60 in Richtung Itzehoe. Nach ca. 30 Minuten steigen Sie an der Haltestelle Elmshorn aus und nehmen am Bahnhof (Holstenplatz) den Bus der Linie 6500 oder 6502. Buslinie 6502: Sie fahren ca. 5 Minuten bis zur Haltestelle "Schule Langelohe". Dort steigen Sie aus und wenden sich nach links. Sie gehen in Richtung des Kreisverkehrs (dort kreuzen sich die Stra&szlig;en K&ouml;llner Chaussee und Langelohe). Sie biegen in die K&ouml;llner Chaussee ein und erreichen nach ca. 200 m Fu&szlig;weg auf der linken Stra&szlig;enseite die NORDAKADEMIE. Buslinie 6500: Wenn Sie den Bus der Linie 500 (Richtung K&ouml;lln-Reisiek) nehmen, steigen Sie nach ca. 5 Minuten Fahrzeit an der Haltestelle "Zum Kr&uuml;ckaupark" aus und gehen ein St&uuml;ck zur&uuml;ck. Nach ca. 50 m Fu&szlig;weg liegt auf der anderen Stra&szlig;enseite die NORDAKADEMIE.
 add-seminar-form.title=Seminar anlegen
-add-seminar-form.maxParticipants=Maximale Teilnehmerzahl
-add-seminar-form.endDate=Enddatum
-add-seminar-form.startDate=Startdatum
-add-seminar-form.shortDescription=Beschreibung
-add-seminar-form.seminarName=Name des Seminars
+edit-seminar-form.title=Seminar editieren
+seminar-form.maxParticipants=Maximale Teilnehmerzahl
+seminar-form.endDate=Enddatum
+seminar-form.startDate=Startdatum
+seminar-form.shortDescription=Beschreibung
+seminar-form.seminarName=Name des Seminars
 addQuestion-form.title=Frage Hinzuf&uuml;gen
 addQuestion-form.typeOfQuestion=Fragetyp
 addQuestion-form.points=Punktzahl
