improve Exception Handling and Layout of Errorpages

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -84,4 +84,6 @@ testAlreadyStartedErrorPage.title=Test bereits gestartet
 testAlreadyStartedErrorPage.info=Sie können den Test leider nicht mehr bearbeiten, da dieser bereits begonnen hat.
 genericErrorPage.title=Allgemeiner Fehler
 genericErrorPage.info=Ein allgemeiner Fehler ist aufgetreten.
+seminarNotFoundErrorPage.title=Seminar existiert nicht
+seminarNotFoundErrorPage.info=Entschuldigung, dieses Seminar existiert leider nicht :(
 
