--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -81,3 +81,5 @@ testAlreadyStartedErrorPage.title=Test already started
 testAlreadyStartedErrorPage.info=You can not edit the because the test has already started.
 genericErrorPage.title=Generic Error
 genericErrorPage.info=A generic error occurred.
+seminarNotFoundErrorPage.title=Seminar does not exist
+seminarNotFoundErrorPage.info=Sorry, but this seminar does not exist :(
