add button on editTest page to add questions

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -15,6 +15,8 @@ home.EditTestButton=Test bearbeiten
 home.loggedIn.infoLecturer=Hier sehen Sie eine Auflistung aller Seminare, f&uuml;r die Sie Dozent sind.
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
+editTest.addQuestionButton=Fragen hinzuf&uuml;gen
+editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdatum
