--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,6 +14,8 @@ home.EditTestButton=edit test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
 add-test.title=Create a Test
 edit-test.title=Edit a Test
+editTest.addQuestionButton=add question
+editTest.info=the test question could be add here.
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdate
