add new texts to I18N files.

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -13,6 +13,10 @@ home.StartTestButton=starte Test
 home.add-testButton=Test hinzuf&uuml;gen
 home.EditTestButton=Test bearbeiten
 home.loggedIn.infoLecturer=Hier sehen Sie eine Auflistung aller Seminare, f&uuml;r die Sie Dozent sind.
+home.tableHeaderName=Seminar-Name
+home.tableHeaderDate=Startdatum - Enddatum
+home.startTest= starte den Test
+home.AdministrateTest= Test verwalten
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
 editTest.addQuestionButton=Fragen hinzuf&uuml;gen
@@ -88,4 +92,16 @@ genericErrorPage.title=Allgemeiner Fehler
 genericErrorPage.info=Ein allgemeiner Fehler ist aufgetreten.
 seminarNotFoundErrorPage.title=Seminar existiert nicht
 seminarNotFoundErrorPage.info=Entschuldigung, dieses Seminar existiert leider nicht :(
-
+impressum.headline= Impressum
+impressum.Info=NORDAKADEMIE gemeinnützige Aktiengesellschaft
+impressum.school.Info=Staatlich anerkannte Fachhochschule mit dualen Studiengängen
+impressum.street=Köllner Chaussee 11
+impressum.city= 25337 Elmshorn
+impressum.phone=+49 (0)4121 4090-0
+impressum.fax=+49 (0)4121 4090-40
+impressum.mail=info@nordakademie.de
+impressum.web=http://www.nordakademie.de
+logout.info= Sie haben sich erfolgreich abgemeldet
+logout.seeyou= Bis bald!
+registration.Step1=Herzlichen Glückwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
+registration.email=Wir haben Ihnen einen Link zugeschickt. Öffnen Sie diesen bitte, um die Registrierung abzuschließen.
