--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,6 +12,10 @@ home.StartTestButton=start test
 home.add-testButton=add test
 home.EditTestButton=edit test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
+home.tableHeaderName=name of seminar
+home.tableHeaderDate=start date - end date
+home.startTest= start test
+home.AdministrateTest= administrate test
 add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
@@ -85,3 +89,16 @@ genericErrorPage.title=Generic Error
 genericErrorPage.info=A generic error occurred.
 seminarNotFoundErrorPage.title=Seminar does not exist
 seminarNotFoundErrorPage.info=Sorry, but this seminar does not exist :(
+impressum.headline= Disclaimer
+impressum.Info=Nordakademie not for profit public company
+impressum.school.Info=public recognized university of applied science - dual education system
+impressum.street=Köllner Chaussee 11
+impressum.city= 25337 Elmshorn
+impressum.phone=+49 (0)4121 4090-0
+impressum.fax=+49 (0)4121 4090-40
+impressum.mail=info@nordakademie.de
+impressum.web=http://www.nordakademie.de
+logout.info= Your logout was successful
+logout.seeyou= See you soon!
+registration.Step1=Congratulations! You finished the first step of registration
+registration.email=We have sent you an email. Please open the link to confirm your registration.
