implelemt internationalisation for edit-seminar form

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,7 +5,6 @@ global.notRegisteredYet=If you are not already registered, please click
 global.alreadyRegistered=If you are alreay registered, please click
 global.clickHereLink=here
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
-home.loggedIn.welcome=Welcome
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
 home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
 home.StartTestButton=start test
@@ -42,12 +41,13 @@ contact.directionsCar=By Car
 contact.directionsCarDescription=Die A23 von Hamburg bei der Autobahnabfahrt Elmshorn verlassen. Am Ende der Ausfahrt rechts abbiegen und der Straße folgen. An der dritten Ampel (gr&ouml;ßere Kreuzung) rechts einordnen und abbiegen. Der Straße folgen - sie f&uuml;hrt rechts an der Tankstelle vorbei. An der n&auml;chsten Kreuzung (Ampel, Schild NORDAKADEMIE) links in die K&ouml;llner Chaussee abbiegen. Nach ungef&auml;hr 500 Metern liegt auf der rechten Seite die NORDAKADEMIE.
 contact.directionsTrain=By Train
 contact.directionsTrainDescription=Sie steigen am Hamburger Hauptbahnhof in die Regionalbahn R70 in Richtung Kiel Hbf oder Sie steigen am Bahnhof Altona in die Regionalbahn R60 in Richtung Itzehoe. Nach ca. 30 Minuten steigen Sie an der Haltestelle Elmshorn aus und nehmen am Bahnhof (Holstenplatz) den Bus der Linie 6500 oder 6502. Buslinie 6502: Sie fahren ca. 5 Minuten bis zur Haltestelle "Schule Langelohe". Dort steigen Sie aus und wenden sich nach links. Sie gehen in Richtung des Kreisverkehrs (dort kreuzen sich die Straßen K&ouml;llner Chaussee und Langelohe). Sie biegen in die K&ouml;llner Chaussee ein und erreichen nach ca. 200 m Fußweg auf der linken Straßenseite die NORDAKADEMIE. Buslinie 6500: Wenn Sie den Bus der Linie 500 (Richtung K&ouml;lln-Reisiek) nehmen, steigen Sie nach ca. 5 Minuten Fahrzeit an der Haltestelle "Zum Kr&uuml;ckaupark" aus und gehen ein St&uuml;ck zur&uuml;ck. Nach ca. 50 m Fußweg liegt auf der anderen Straßenseite die NORDAKADEMIE.
+edit-seminar-form.title=Edit Seminar
 add-seminar-form.title=Create Seminar
-add-seminar-form.maxParticipants=Maximum attendance
-add-seminar-form.endDateString=Enddate
-add-seminar-form.startDateString=Startdate
-add-seminar-form.shortDescription=Description
-add-seminar-form.seminarName=Name of the Seminar
+seminar-form.maxParticipants=Maximum attendance
+seminar-form.endDate=Enddate
+seminar-form.startDate=Startdate
+seminar-form.shortDescription=Description
+seminar-form.seminarName=Name of the Seminar
 addQuestion-form.title=Add Question
 addQuestion-form.typeOfQuestion=Type of question
 addQuestion-form.points=Points
@@ -77,7 +77,7 @@ loginForm.eMail=e-Mail
 loginForm.password=Password
 notLoggedInErrorPage.title=Not logged in.
 alreadyLoggedInErrorPage.title=Already logged in.
-alreadyLoggedInErrorPage.Info=You are already logged in.
+alreadyLoggedInErrorPage.info=You are already logged in.
 alreadyLoggedInErrorPage.linkToHomeText=If you want to go to the starting page, please click
 insufficientPermissionsErrorpage.title=Permission error
 insufficientPermissionsErrorpage.info=Unfortunately you do not have the permission to fulfill this request.
